--- a/src/index.css
+++ b/src/index.css
@@ -17,23 +17,31 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
+style 
+  :root {
+    color-scheme: light dark;
+  }
+
+/* a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #78f253;
+} */
+
+html {
+  font-family: system-ui, sans-serif;
 }
 
 body {
-  margin: 0;
+  background: #050505;
   display: flex;
-  place-items: center;
-  min-width: 320px;
+  justify-content: center;
   min-height: 100vh;
 }
-
+/* 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -69,4 +77,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
